bebytes/tests/compile_time/unsupported_f64.stderr
error: Unsupported type for U8 attribute
  --> tests/compile_time/unsupported_f64.rs:12:13
   |
12 |     second: f64,
   |             ^^^
